--- a/src/Story.css
+++ b/src/Story.css
@@ -177,3 +177,7 @@
 figure {
     margin-left: 250px;
 }
+
+.mock-story-audio {
+    margin-left: 250px;
+}
